[tool.poetry]
name = "remodemo"
version = "0.1.0"
description = ""
authors = ["Ben Walton <benwalton@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
motor = "^3.6.0"
pydantic = "^2.9.2"
fastapi = "^0.115.5"
mongomock-motor = "^0.0.34"
black = "^24.10.0"
pyjwt = "^2.9.0"
uvicorn = "^0.32.0"
pydantic-settings = "^2.6.1"
pytest = "^8.3.3"
redis = "^5.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
